--- a/mypage01.html
+++ b/mypage01.html
@@ -31,12 +31,7 @@
       >ID: 6519410016</span
     >
     <div>
-      <button
-        style="display: block; margin: auto; padding: 20px"
-        onclick="showWelcome()"
-      >
-        CLICK ME
-      </button>
+      <buttonstyle="display: block; margin: auto; padding: 20px"onclick="showWelcome()">CLICK ME</button>
     </div>
     <hr />
     <p style="text-align: center; padding: 0px 50px">
